adjusted soil aggregation

--- a/src/importSoil/soilaggregation.ipynb
+++ b/src/importSoil/soilaggregation.ipynb
@@ -2,30 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "e:\\Programming\\CGC_Grain_Outcome_Predictions\\env\\lib\\site-packages\\geopandas\\_compat.py:124: UserWarning: The Shapely GEOS version (3.11.1-CAPI-1.17.1) is incompatible with the GEOS version PyGEOS was compiled with (3.10.4-CAPI-1.16.2). Conversions between both will be slow.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\danew\\AppData\\Local\\Temp\\ipykernel_27300\\3669903583.py:2: DeprecationWarning: Shapely 2.0 is installed, but because PyGEOS is also installed, GeoPandas still uses PyGEOS by default. However, starting with version 0.14, the default will switch to Shapely. To force to use Shapely 2.0 now, you can either uninstall PyGEOS or set the environment variable USE_PYGEOS=0. You can do this before starting the Python process, or in your code before importing geopandas:\n",
+      "\n",
+      "import os\n",
+      "os.environ['USE_PYGEOS'] = '0'\n",
+      "import geopandas\n",
+      "\n",
+      "In the next release, GeoPandas will switch to using Shapely by default, even if PyGEOS is installed. If you only have PyGEOS installed to get speed-ups, this switch should be smooth. However, if you are using PyGEOS directly (calling PyGEOS functions on geometries from GeoPandas), this will then stop working and you are encouraged to migrate from PyGEOS to Shapely 2.0 (https://shapely.readthedocs.io/en/latest/migration_pygeos.html).\n",
+      "  import geopandas as gpd  # type: ignore\n"
+     ]
+    }
+   ],
    "source": [
-    "import os\n",
-    "import xarray as xr\n",
-    "import geopandas as gpd  # type: ignore\n",
-    "\n",
     "from dotenv import load_dotenv\n",
-    "import sqlalchemy as sq  # type: ignore\n",
-    "import sys\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt  # type: ignore\n",
+    "import geopandas as gpd  # type: ignore\n",
+    "import sqlalchemy as sq\n",
+    "import pandas as pd  # type: ignore\n",
+    "import os, sys\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from Shared.DataService import DataService  # type: ignore"
+    "from Shared.DataService import DataService"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "TABLENAME = \"agg_soil_data\"\n",
     "SOIL_GEOM_TABLE = \"soil_geometry\"\n",
     "SOIL_COMP_TABLE = \"soil_components\"\n",
     "SOIL_SURRONDINGS_TABLE = \"soil_surronding_land\"\n",
@@ -41,27 +55,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pullSoilData(conn):\n",
-    "    query = sq.text(\"select * FROM public.soil_data\")\n",
+    "def pullSoilData(conn: sq.engine.Connection) -> pd.DataFrame:\n",
+    "    query = sq.text(\"SELECT * FROM public.soil_data\")\n",
     "    soil_data = pd.read_sql(query, conn)\n",
     "    soil_data = soil_data[\n",
     "        [\n",
     "            \"id\",\n",
     "            \"province\",\n",
-    "            \"kind\",\n",
-    "            \"name\",\n",
-    "            \"water_table\",\n",
-    "            \"root_restrict\",\n",
-    "            \"drainage\",\n",
-    "            \"parent_material_texture_1\",\n",
-    "            \"parent_material_chemical_1\",\n",
-    "            \"mode_of_depo_1\",\n",
     "            \"percnt_coarse_frag\",\n",
-    "            \"sand_texture\",\n",
     "            \"total_sand\",\n",
     "            \"total_silt\",\n",
     "            \"total_clay\",\n",
@@ -77,114 +82,148 @@
     "            \"percnt_wood\",\n",
     "        ]\n",
     "    ]\n",
+    "\n",
     "    soil_data.rename(columns={\"id\": \"soil_id\"}, inplace=True)\n",
+    "\n",
     "    return soil_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pullSurroundingSoil(conn):\n",
-    "    query = sq.text(\"select * FROM public.soil_surronding_land\")\n",
+    "def pullSurroundingSoil(conn: sq.engine.Connection) -> pd.DataFrame:\n",
+    "    query = sq.text(\"SELECT * FROM public.soil_surronding_land\")\n",
     "    surronding_soil = pd.read_sql(query, conn)\n",
     "    surronding_soil = surronding_soil[[\"poly_id\", \"land_area\", \"water_area\"]]\n",
+    "\n",
     "    return surronding_soil"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pullSoilComponents(conn):\n",
-    "    query = sq.text(\"select * FROM public.soil_components\")\n",
+    "def pullSoilComponents(conn: sq.engine.Connection) -> pd.DataFrame:\n",
+    "    query = sq.text(\"SELECT * FROM public.soil_components\")\n",
     "    soil_components = pd.read_sql(query, conn)\n",
     "    soil_components = soil_components[\n",
     "        [\n",
     "            \"poly_id\",\n",
-    "            \"cmp\",\n",
-    "            \"percent\",\n",
     "            \"province\",\n",
-    "            \"profile\",\n",
     "            \"soil_id\",\n",
     "            \"water_holding_cap\",\n",
     "        ]\n",
     "    ]\n",
+    "\n",
     "    return soil_components"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pullSoilGeometry(conn):\n",
+    "def pullSoilGeometry(conn: sq.engine.Connection) -> pd.DataFrame:\n",
     "    # load the boundaries for the agriculture regions\n",
-    "    query = sq.text(\"select district, geometry FROM public.census_ag_regions\")  # type: ignore\n",
-    "    agRegions = gpd.GeoDataFrame.from_postgis(query, conn, crs=\"EPSG:3347\", geom_col=\"geometry\")  # type: ignore\n",
+    "    regionQuery = sq.text(\"select district, geometry FROM public.census_ag_regions\")\n",
+    "    agRegions = gpd.GeoDataFrame.from_postgis(\n",
+    "        regionQuery, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
+    "    )\n",
     "\n",
-    "    query = sq.text(\"select * FROM public.soil_geometry\")\n",
+    "    soilQuery = sq.text(\"select * FROM public.soil_geometry\")\n",
     "    soilRegions = gpd.GeoDataFrame.from_postgis(\n",
-    "        query, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
+    "        soilQuery, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
     "    )\n",
     "\n",
     "    # Join to add district to df\n",
-    "    soil_geometry = gpd.sjoin(soilRegions, agRegions, how=\"inner\", op=\"intersects\")\n",
+    "    soil_geometry = gpd.sjoin(soilRegions, agRegions, how=\"inner\", predicate=\"intersects\")\n",
     "    soil_geometry.drop(columns=[\"geometry\", \"index_right\"], inplace=True)\n",
     "    soil_geometry = pd.DataFrame(soil_geometry)\n",
+    "\n",
     "    return soil_geometry"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getMergedf(soil_data, surronding_soil, soil_components, soil_geometry):\n",
+    "def getMergedf(\n",
+    "    soil_data: pd.DataFrame,\n",
+    "    surronding_soil: pd.DataFrame,\n",
+    "    soil_components: pd.DataFrame,\n",
+    "    soil_geometry: pd.DataFrame,\n",
+    ") -> pd.DataFrame:\n",
     "    # Commands to join tables\n",
     "    merge_df = soil_components.merge(soil_data, on=[\"soil_id\", \"province\"], how=\"inner\")\n",
     "    merge_df = merge_df.merge(surronding_soil, on=\"poly_id\", how=\"inner\")\n",
     "    merge_df = merge_df.merge(soil_geometry, on=\"poly_id\", how=\"inner\")\n",
     "\n",
-    "    #  Commands to remove duplicates\n",
-    "    merge_df.duplicated().sum()\n",
-    "    merge_df = merge_df.drop_duplicates()\n",
-    "\n",
     "    # Commands to change attributes which are object types\n",
-    "    merge_df = pd.get_dummies(\n",
-    "        merge_df,\n",
-    "        columns=[\n",
-    "            \"profile\",\n",
-    "            \"kind\",\n",
-    "            \"water_table\",\n",
-    "            \"root_restrict\",\n",
-    "            \"drainage\",\n",
-    "            \"parent_material_texture_1\",\n",
-    "            \"parent_material_chemical_1\",\n",
-    "            \"mode_of_depo_1\",\n",
-    "            \"sand_texture\",\n",
-    "        ],\n",
-    "    )\n",
     "    merge_df[\"water_holding_cap\"] = pd.to_numeric(\n",
     "        merge_df[\"water_holding_cap\"], errors=\"coerce\"\n",
     "    )\n",
     "\n",
+    "    merge_df.drop(columns=[\"poly_id\", \"province\", \"soil_id\"], inplace=True)\n",
+    "\n",
     "    # Aggregate Data\n",
-    "    merge_df.groupby([\"poly_id\", \"province\", \"soil_id\", \"name\"]).agg(\n",
-    "        \"mean\"\n",
+    "    final_df = merge_df.groupby([\"district\"]).agg(\n",
+    "        {\n",
+    "            \"percnt_coarse_frag\": [\"mean\"],\n",
+    "            \"total_sand\": [\"mean\"],\n",
+    "            \"total_silt\": [\"mean\"],\n",
+    "            \"total_clay\": [\"mean\"],\n",
+    "            \"percnt_carbon\": [\"mean\"],\n",
+    "            \"calcium_ph\": [\"mean\"],\n",
+    "            \"proj_ph\": [\"mean\"],\n",
+    "            \"water_reten_0\": [\"mean\"],\n",
+    "            \"water_reten_10\": [\"mean\"],\n",
+    "            \"water_reten_33\": [\"mean\"],\n",
+    "            \"water_reten_1500\": [\"mean\"],\n",
+    "            \"bulk_density\": [\"mean\"],\n",
+    "            \"elec_cond\": [\"mean\"],\n",
+    "            \"percnt_wood\": [\"mean\"],\n",
+    "            \"water_holding_cap\": [\"mean\"],\n",
+    "            \"land_area\": [\"mean\"],\n",
+    "            \"water_area\": [\"mean\"]\n",
+    "        }\n",
     "    ).reset_index()\n",
-    "    return merge_df"
+    "\n",
+    "    # rename columns\n",
+    "    final_df.columns = [  # type: ignore\n",
+    "            \"district\",\n",
+    "            \"avg_percnt_coarse_frag\",\n",
+    "            \"avg_total_sand\",\n",
+    "            \"avg_total_silt\",\n",
+    "            \"avg_total_clay\",\n",
+    "            \"avg_percnt_carbon\",\n",
+    "            \"avg_calcium_ph\",\n",
+    "            \"avg_proj_ph\",\n",
+    "            \"avg_water_reten_0\",\n",
+    "            \"avg_water_reten_10\",\n",
+    "            \"avg_water_reten_33\",\n",
+    "            \"avg_water_reten_1500\",\n",
+    "            \"avg_bulk_density\",\n",
+    "            \"avg_elec_cond\",\n",
+    "            \"avg_percnt_wood\",\n",
+    "            \"avg_water_holding_cap\",\n",
+    "            \"avg_land_area\",\n",
+    "            \"avg_water_area\"\n",
+    "    ]\n",
+    "\n",
+    "    return final_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,15 +248,16 @@
     "\n",
     "    # Merge data and aggregate them\n",
     "    merge_df = getMergedf(soil_data, surronding_soil, soil_components, soil_geometry)\n",
-    "    TABLENAME = \"agg_soil_data\"\n",
     "\n",
     "    # Command to add to db\n",
-    "    merge_df.tosql(TABLENAME, conn, schema=\"public\", if_exists=\"replace\", index=False)"
+    "    merge_df.to_sql(TABLENAME, conn, schema=\"public\", if_exists=\"replace\", index=False)\n",
+    "    conn.commit()\n",
+    "    db.cleanup()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.0"
   },
   "orig_nbformat": 4
  },
