ran linter and cleared notebook

--- a/src/importSoil/soilaggregation.ipynb
+++ b/src/importSoil/soilaggregation.ipynb
@@ -2,26 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "e:\\Programming\\CGC_Grain_Outcome_Predictions\\env\\lib\\site-packages\\geopandas\\_compat.py:124: UserWarning: The Shapely GEOS version (3.11.1-CAPI-1.17.1) is incompatible with the GEOS version PyGEOS was compiled with (3.10.4-CAPI-1.16.2). Conversions between both will be slow.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\danew\\AppData\\Local\\Temp\\ipykernel_27300\\3669903583.py:2: DeprecationWarning: Shapely 2.0 is installed, but because PyGEOS is also installed, GeoPandas still uses PyGEOS by default. However, starting with version 0.14, the default will switch to Shapely. To force to use Shapely 2.0 now, you can either uninstall PyGEOS or set the environment variable USE_PYGEOS=0. You can do this before starting the Python process, or in your code before importing geopandas:\n",
-      "\n",
-      "import os\n",
-      "os.environ['USE_PYGEOS'] = '0'\n",
-      "import geopandas\n",
-      "\n",
-      "In the next release, GeoPandas will switch to using Shapely by default, even if PyGEOS is installed. If you only have PyGEOS installed to get speed-ups, this switch should be smooth. However, if you are using PyGEOS directly (calling PyGEOS functions on geometries from GeoPandas), this will then stop working and you are encouraged to migrate from PyGEOS to Shapely 2.0 (https://shapely.readthedocs.io/en/latest/migration_pygeos.html).\n",
-      "  import geopandas as gpd  # type: ignore\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "import geopandas as gpd  # type: ignore\n",
@@ -35,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +125,9 @@
     "    )\n",
     "\n",
     "    # Join to add district to df\n",
-    "    soil_geometry = gpd.sjoin(soilRegions, agRegions, how=\"inner\", predicate=\"intersects\")\n",
+    "    soil_geometry = gpd.sjoin(\n",
+    "        soilRegions, agRegions, how=\"inner\", predicate=\"intersects\"\n",
+    "    )\n",
     "    soil_geometry.drop(columns=[\"geometry\", \"index_right\"], inplace=True)\n",
     "    soil_geometry = pd.DataFrame(soil_geometry)\n",
     "\n",
@@ -151,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,48 +159,52 @@
     "    merge_df.drop(columns=[\"poly_id\", \"province\", \"soil_id\"], inplace=True)\n",
     "\n",
     "    # Aggregate Data\n",
-    "    final_df = merge_df.groupby([\"district\"]).agg(\n",
-    "        {\n",
-    "            \"percnt_coarse_frag\": [\"mean\"],\n",
-    "            \"total_sand\": [\"mean\"],\n",
-    "            \"total_silt\": [\"mean\"],\n",
-    "            \"total_clay\": [\"mean\"],\n",
-    "            \"percnt_carbon\": [\"mean\"],\n",
-    "            \"calcium_ph\": [\"mean\"],\n",
-    "            \"proj_ph\": [\"mean\"],\n",
-    "            \"water_reten_0\": [\"mean\"],\n",
-    "            \"water_reten_10\": [\"mean\"],\n",
-    "            \"water_reten_33\": [\"mean\"],\n",
-    "            \"water_reten_1500\": [\"mean\"],\n",
-    "            \"bulk_density\": [\"mean\"],\n",
-    "            \"elec_cond\": [\"mean\"],\n",
-    "            \"percnt_wood\": [\"mean\"],\n",
-    "            \"water_holding_cap\": [\"mean\"],\n",
-    "            \"land_area\": [\"mean\"],\n",
-    "            \"water_area\": [\"mean\"]\n",
-    "        }\n",
-    "    ).reset_index()\n",
+    "    final_df = (\n",
+    "        merge_df.groupby([\"district\"])\n",
+    "        .agg(\n",
+    "            {\n",
+    "                \"percnt_coarse_frag\": [\"mean\"],\n",
+    "                \"total_sand\": [\"mean\"],\n",
+    "                \"total_silt\": [\"mean\"],\n",
+    "                \"total_clay\": [\"mean\"],\n",
+    "                \"percnt_carbon\": [\"mean\"],\n",
+    "                \"calcium_ph\": [\"mean\"],\n",
+    "                \"proj_ph\": [\"mean\"],\n",
+    "                \"water_reten_0\": [\"mean\"],\n",
+    "                \"water_reten_10\": [\"mean\"],\n",
+    "                \"water_reten_33\": [\"mean\"],\n",
+    "                \"water_reten_1500\": [\"mean\"],\n",
+    "                \"bulk_density\": [\"mean\"],\n",
+    "                \"elec_cond\": [\"mean\"],\n",
+    "                \"percnt_wood\": [\"mean\"],\n",
+    "                \"water_holding_cap\": [\"mean\"],\n",
+    "                \"land_area\": [\"mean\"],\n",
+    "                \"water_area\": [\"mean\"],\n",
+    "            }\n",
+    "        )\n",
+    "        .reset_index()\n",
+    "    )\n",
     "\n",
     "    # rename columns\n",
     "    final_df.columns = [  # type: ignore\n",
-    "            \"district\",\n",
-    "            \"avg_percnt_coarse_frag\",\n",
-    "            \"avg_total_sand\",\n",
-    "            \"avg_total_silt\",\n",
-    "            \"avg_total_clay\",\n",
-    "            \"avg_percnt_carbon\",\n",
-    "            \"avg_calcium_ph\",\n",
-    "            \"avg_proj_ph\",\n",
-    "            \"avg_water_reten_0\",\n",
-    "            \"avg_water_reten_10\",\n",
-    "            \"avg_water_reten_33\",\n",
-    "            \"avg_water_reten_1500\",\n",
-    "            \"avg_bulk_density\",\n",
-    "            \"avg_elec_cond\",\n",
-    "            \"avg_percnt_wood\",\n",
-    "            \"avg_water_holding_cap\",\n",
-    "            \"avg_land_area\",\n",
-    "            \"avg_water_area\"\n",
+    "        \"district\",\n",
+    "        \"avg_percnt_coarse_frag\",\n",
+    "        \"avg_total_sand\",\n",
+    "        \"avg_total_silt\",\n",
+    "        \"avg_total_clay\",\n",
+    "        \"avg_percnt_carbon\",\n",
+    "        \"avg_calcium_ph\",\n",
+    "        \"avg_proj_ph\",\n",
+    "        \"avg_water_reten_0\",\n",
+    "        \"avg_water_reten_10\",\n",
+    "        \"avg_water_reten_33\",\n",
+    "        \"avg_water_reten_1500\",\n",
+    "        \"avg_bulk_density\",\n",
+    "        \"avg_elec_cond\",\n",
+    "        \"avg_percnt_wood\",\n",
+    "        \"avg_water_holding_cap\",\n",
+    "        \"avg_land_area\",\n",
+    "        \"avg_water_area\",\n",
     "    ]\n",
     "\n",
     "    return final_df"
@@ -223,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
