made correlation plots for soil attributes
made correlation plots for soil attributes

--- a/src/importSoil/soilVisualization.ipynb
+++ b/src/importSoil/soilVisualization.ipynb
@@ -6,7 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# correlation plots"
+    "import matplotlib.pyplot as plt  # type: ignore\n",
+    "from dotenv import load_dotenv\n",
+    "import sqlalchemy as sq\n",
+    "import seaborn as sns  # type: ignore\n",
+    "import pandas as pd  # type: ignore\n",
+    "import numpy as np\n",
+    "import os, sys\n",
+    "\n",
+    "sys.path.append(\"../\")\n",
+    "from Shared.DataService import DataService"
    ]
   },
   {
@@ -15,13 +24,201 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# distribution  of items accross Canada"
+    "load_dotenv()\n",
+    "PG_DB = os.getenv(\"POSTGRES_DB\")\n",
+    "PG_ADDR = os.getenv(\"POSTGRES_ADDR\")\n",
+    "PG_PORT = os.getenv(\"POSTGRES_PORT\")\n",
+    "PG_USER = os.getenv(\"POSTGRES_USER\")\n",
+    "PG_PW = os.getenv(\"POSTGRES_PW\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if (\n",
+    "    PG_DB is None\n",
+    "    or PG_ADDR is None\n",
+    "    or PG_PORT is None\n",
+    "    or PG_USER is None\n",
+    "    or PG_PW is None\n",
+    "):\n",
+    "    raise ValueError(\"Environment variables not set\")\n",
+    "\n",
+    "db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
+    "conn = db.connect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soilQuery = sq.text(\n",
+    "    \"\"\"\n",
+    "    SELECT * FROM public.agg_soil_data;\n",
+    "    \"\"\"\n",
+    ")\n",
+    "\n",
+    "soilDf = pd.read_sql_query(soilQuery, conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ergotQuery = sq.text(\n",
+    "    \"\"\"\n",
+    "    SELECT year, district, percnt_true, has_ergot, sum_severity, present_prev1, present_prev2, present_prev3, present_in_neighbor, severity_prev1, \n",
+    "        severity_prev2, severity_prev3, severity_in_neighbor FROM public.agg_ergot_samples\n",
+    "    GROUP BY year, district, percnt_true, has_ergot, sum_severity, present_prev1, present_prev2, present_prev3, present_in_neighbor, severity_prev1, \n",
+    "        severity_prev2, severity_prev3, severity_in_neighbor;\n",
+    "    \"\"\"\n",
+    ")\n",
+    "\n",
+    "ergotDF = pd.read_sql_query(ergotQuery, conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df = soilDf.merge(ergotDF, on=[\"district\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df.drop(columns=[\"district\", \"year\"], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corr = final_df.corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.set_theme(style=\"white\")\n",
+    "\n",
+    "# Generate a mask for the upper triangle\n",
+    "mask = np.triu(np.ones_like(corr, dtype=bool))\n",
+    "\n",
+    "# Set up the matplotlib figure\n",
+    "f, ax = plt.subplots(figsize=(11, 9))\n",
+    "\n",
+    "# Generate a custom diverging colormap\n",
+    "cmap = sns.diverging_palette(230, 20, as_cmap=True)\n",
+    "\n",
+    "# Draw the heatmap with the mask and correct aspect ratio\n",
+    "sns.heatmap(\n",
+    "    corr,\n",
+    "    mask=mask,\n",
+    "    cmap=cmap,\n",
+    "    vmax=1,\n",
+    "    vmin=-1,\n",
+    "    center=0,\n",
+    "    square=True,\n",
+    "    linewidths=0.5,\n",
+    "    cbar_kws={\"shrink\": 0.5},\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.pairplot(final_df[[\"has_ergot\", \"sum_severity\", \"avg_calcium_ph\", \"avg_proj_ph\"]])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.pairplot(\n",
+    "    final_df[[\"has_ergot\", \"sum_severity\", \"avg_total_sand\", \"avg_water_reten_10\"]]\n",
+    ")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.pairplot(ergotDF[[\"percnt_true\", \"severity_in_neighbor\"]])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.cleanup()"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   },
   "orig_nbformat": 4
  },
