added weights to soil attributes

--- a/src/importSoil/soilaggregation.ipynb
+++ b/src/importSoil/soilaggregation.ipynb
@@ -98,6 +98,7 @@
     "        [\n",
     "            \"poly_id\",\n",
     "            \"province\",\n",
+    "            \"percent\",\n",
     "            \"soil_id\",\n",
     "            \"water_holding_cap\",\n",
     "        ]\n",
@@ -156,7 +157,22 @@
     "        merge_df[\"water_holding_cap\"], errors=\"coerce\"\n",
     "    )\n",
     "\n",
-    "    merge_df.drop(columns=[\"poly_id\", \"province\", \"soil_id\"], inplace=True)\n",
+    "    # Removes the columns we wont want to scale by weights (percent of polygon occupied)\n",
+    "    cols = merge_df.columns.tolist()\n",
+    "    cols.remove(\"poly_id\")\n",
+    "    cols.remove(\"province\")\n",
+    "    cols.remove(\"soil_id\")\n",
+    "    cols.remove(\"percent\")\n",
+    "    cols.remove(\"district\")\n",
+    "\n",
+    "    # Modifies values to take the percentage of attributes into account\n",
+    "    for index in range(len(merge_df)):\n",
+    "        for col in cols:\n",
+    "            merge_df.loc[index, col] = (\n",
+    "                merge_df.loc[index, \"percent\"] * merge_df.loc[index, col] * 0.01\n",
+    "            )\n",
+    "\n",
+    "    merge_df.drop(columns=[\"poly_id\", \"province\", \"soil_id\", \"percent\"], inplace=True)\n",
     "\n",
     "    # Aggregate Data\n",
     "    final_df = (\n",
