Da soil aggregation (#75)

--- a/src/extra/labelSoil.ipynb
+++ b/src/extra/labelSoil.ipynb
@@ -8,10 +8,10 @@
    "source": [
     "from matplotlib import pyplot as plt  # type: ignore\n",
     "from colorhash import ColorHash  # type: ignore\n",
+    "from dotenv import load_dotenv\n",
     "import sqlalchemy as sq\n",
     "import geopandas as gpd  # type: ignore\n",
     "import pandas as pd  # type: ignore\n",
-    "from dotenv import load_dotenv\n",
     "import os, sys\n",
     "\n",
     "sys.path.append(\"../\")\n",
@@ -48,6 +48,7 @@
     "    or PG_PW is None\n",
     "):\n",
     "    raise ValueError(\"Environment variables not set\")\n",
+    "\n",
     "db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
     "conn = db.connect()"
    ]
@@ -59,8 +60,10 @@
    "outputs": [],
    "source": [
     "# load the boundaries for the agriculture regions\n",
-    "query = sq.text(\"select cr_num, district, geometry FROM public.census_ag_regions\")  # type: ignore\n",
-    "agRegions = gpd.GeoDataFrame.from_postgis(query, conn, crs=\"EPSG:3347\", geom_col=\"geometry\")  # type: ignore"
+    "regionQuery = sq.text(\"select cr_num, district, geometry FROM public.census_ag_regions\")\n",
+    "agRegions = gpd.GeoDataFrame.from_postgis(\n",
+    "    regionQuery, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
+    ")"
    ]
   },
   {
@@ -70,9 +73,14 @@
    "outputs": [],
    "source": [
     "# load the polygon components\n",
-    "query = pd.read_sql_query(\"select soil_id, poly_id FROM public.soil_components\", conn)  # type: ignore\n",
-    "components = pd.DataFrame(query, columns=[\"soil_id\", \"poly_id\"])  # type: ignore\n",
-    "components = components.groupby(\"poly_id\")[\"soil_id\"].apply(set)  # type: ignore"
+    "cmpQuery = pd.read_sql_query(\n",
+    "    \"select soil_id, poly_id FROM public.soil_components\", conn\n",
+    ")\n",
+    "components = (\n",
+    "    pd.DataFrame(cmpQuery, columns=[\"soil_id\", \"poly_id\"])\n",
+    "    .groupby(\"poly_id\")[\"soil_id\"]\n",
+    "    .apply(set)\n",
+    ")"
    ]
   },
   {
@@ -82,9 +90,9 @@
    "outputs": [],
    "source": [
     "# load the boundaries for the polygons\n",
-    "query = sq.text(\"select poly_id, geometry FROM public.soil_geometry\")\n",
+    "soilQuery = sq.text(\"select poly_id, geometry FROM public.soil_geometry\")\n",
     "soilRegions = gpd.GeoDataFrame.from_postgis(\n",
-    "    query, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
+    "    soilQuery, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
     ")"
    ]
   },
