--- a/src/Ergot/aggregateErgot.ipynb
+++ b/src/Ergot/aggregateErgot.ipynb
@@ -113,7 +113,6 @@
     "\n",
     "    for year in ergot[\"year\"].unique():\n",
     "        for district in ergot[\"district\"].unique():\n",
-    "\n",
     "            # load the current ag_region samples\n",
     "            currSamples = ergot.query(f\"year == {year} and district == {district}\")\n",
     "\n",
@@ -140,7 +139,8 @@
     "                \"severity_prev1\": prev1Year[\"incidence\"].sum() / len(prev1Year),\n",
     "                \"severity_prev2\": prev2Year[\"incidence\"].sum() / len(prev2Year),\n",
     "                \"severity_prev3\": prev3Year[\"incidence\"].sum() / len(prev3Year),\n",
-    "                \"severity_in_neighbor\": neighborSamples[\"incidence\"].sum() / len(neighborSamples)\n",
+    "                \"severity_in_neighbor\": neighborSamples[\"incidence\"].sum()\n",
+    "                / len(neighborSamples),\n",
     "            }\n",
     "\n",
     "            ergotList.append(currEntry)\n",
