--- a/src/Ergot/aggregateErgot.ipynb
+++ b/src/Ergot/aggregateErgot.ipynb
@@ -109,86 +109,52 @@
    "outputs": [],
    "source": [
     "def createErgotFeatures(ergot: pd.DataFrame, touches: gpd.GeoDataFrame) -> pd.DataFrame:\n",
-    "    ergot[\"percnt_true\"] = None\n",
-    "    ergot[\"has_ergot\"] = False\n",
-    "    ergot[\"sum_severity\"] = 0\n",
-    "\n",
-    "    ergot[\"present_prev1\"] = False\n",
-    "    ergot[\"present_prev2\"] = False\n",
-    "    ergot[\"present_prev3\"] = False\n",
-    "    ergot[\"present_in_neighbor\"] = False\n",
-    "\n",
-    "    ergot[\"severity_prev1\"] = 0\n",
-    "    ergot[\"severity_prev2\"] = 0\n",
-    "    ergot[\"severity_prev3\"] = 0\n",
-    "    ergot[\"severity_in_neighbor\"] = 0\n",
+    "    ergotList = []\n",
     "\n",
     "    for year in ergot[\"year\"].unique():\n",
-    "        for uid in ergot[\"district\"].unique():\n",
+    "        for district in ergot[\"district\"].unique():\n",
     "            # load the current ag_region samples\n",
-    "            currSamples = ergot.query(f\"year == {year} and district == {uid}\")\n",
+    "            currSamples = ergot.query(f\"year == {year} and district == {district}\")\n",
     "\n",
     "            # load the neighbors samples\n",
     "            neighborSamples = ergot.query(\n",
-    "                f\"year == {year} and district in {touches[str(uid)]}\"\n",
+    "                f\"year == {year} and district in {touches[str(district)]}\"\n",
     "            )\n",
     "\n",
-    "            # load last years samples\n",
-    "            prev1Year = ergot.query(f\"year == {year - 1} and district == {uid}\")\n",
+    "            # load samples for some of the previous years\n",
+    "            prev1Year = ergot.query(f\"year == {year - 1} and district == {district}\")\n",
+    "            prev2Year = ergot.query(f\"year == {year - 2} and district == {district}\")\n",
+    "            prev3Year = ergot.query(f\"year == {year - 3} and district == {district}\")\n",
     "\n",
-    "            # load the samples from 2 years ago\n",
-    "            prev2Year = ergot.query(f\"year == {year - 2} and district == {uid}\")\n",
+    "            currEntry = {\n",
+    "                \"year\": year,\n",
+    "                \"district\": district,\n",
+    "                \"percnt_true\": currSamples[\"incidence\"].sum() / len(currSamples),\n",
+    "                \"has_ergot\": currSamples[\"incidence\"].sum() > 0,\n",
+    "                \"sum_severity\": currSamples[\"severity\"].sum(),\n",
+    "                \"present_prev1\": prev1Year[\"incidence\"].sum() > 0,\n",
+    "                \"present_prev2\": prev2Year[\"incidence\"].sum() > 0,\n",
+    "                \"present_prev3\": prev3Year[\"incidence\"].sum() > 0,\n",
+    "                \"present_in_neighbor\": neighborSamples[\"incidence\"].sum() > 0,\n",
+    "                \"severity_prev1\": prev1Year[\"incidence\"].sum() / len(prev1Year),\n",
+    "                \"severity_prev2\": prev2Year[\"incidence\"].sum() / len(prev2Year),\n",
+    "                \"severity_prev3\": prev3Year[\"incidence\"].sum() / len(prev3Year),\n",
+    "                \"severity_in_neighbor\": neighborSamples[\"incidence\"].sum()\n",
+    "                / len(neighborSamples),\n",
+    "            }\n",
     "\n",
-    "            # load the samples from 3 years ago\n",
-    "            prev3Year = ergot.query(f\"year == {year - 3} and district == {uid}\")\n",
+    "            ergotList.append(currEntry)\n",
     "\n",
-    "            ergot.loc[\n",
-    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"percnt_true\"\n",
-    "            ] = currSamples[\"incidence\"].sum() / len(currSamples)\n",
-    "            ergot.loc[\n",
-    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"has_ergot\"\n",
-    "            ] = (currSamples[\"incidence\"].sum() > 0)\n",
-    "            ergot.loc[\n",
-    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"sum_severity\"\n",
-    "            ] = currSamples[\"severity\"].sum()\n",
-    "\n",
-    "            ergot.loc[\n",
-    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"present_prev1\"\n",
-    "            ] = (prev1Year[\"incidence\"].sum() > 0)\n",
-    "            ergot.loc[\n",
-    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"present_prev2\"\n",
-    "            ] = (prev2Year[\"incidence\"].sum() > 0)\n",
-    "            ergot.loc[\n",
-    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"present_prev3\"\n",
-    "            ] = (prev3Year[\"incidence\"].sum() > 0)\n",
-    "            ergot.loc[\n",
-    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid),\n",
-    "                \"present_in_neighbor\",\n",
-    "            ] = (\n",
-    "                neighborSamples[\"incidence\"].sum() > 0\n",
-    "            )\n",
-    "\n",
-    "            ergot.loc[\n",
-    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"severity_prev1\"\n",
-    "            ] = prev1Year[\"incidence\"].sum() / len(prev1Year)\n",
-    "            ergot.loc[\n",
-    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"severity_prev2\"\n",
-    "            ] = prev2Year[\"incidence\"].sum() / len(prev2Year)\n",
-    "            ergot.loc[\n",
-    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid), \"severity_prev3\"\n",
-    "            ] = prev3Year[\"incidence\"].sum() / len(prev3Year)\n",
-    "            ergot.loc[\n",
-    "                (ergot[\"year\"] == year) & (ergot[\"district\"] == uid),\n",
-    "                \"severity_in_neighbor\",\n",
-    "            ] = neighborSamples[\"incidence\"].sum() / len(neighborSamples)\n",
+    "    aggErgot = pd.DataFrame(ergotList)\n",
     "\n",
     "    # set any unexpected values to 0\n",
-    "    ergot.loc[ergot[\"severity_prev1\"].isna(), \"severity_prev1\"] = 0\n",
-    "    ergot.loc[ergot[\"severity_prev2\"].isna(), \"severity_prev2\"] = 0\n",
-    "    ergot.loc[ergot[\"severity_prev3\"].isna(), \"severity_prev3\"] = 0\n",
-    "    ergot.loc[ergot[\"severity_in_neighbor\"].isna(), \"severity_in_neighbor\"] = 0\n",
+    "    aggErgot.loc[aggErgot[\"percnt_true\"].isna(), \"percnt_true\"] = 0\n",
+    "    aggErgot.loc[aggErgot[\"severity_prev1\"].isna(), \"severity_prev1\"] = 0\n",
+    "    aggErgot.loc[aggErgot[\"severity_prev2\"].isna(), \"severity_prev2\"] = 0\n",
+    "    aggErgot.loc[aggErgot[\"severity_prev3\"].isna(), \"severity_prev3\"] = 0\n",
+    "    aggErgot.loc[aggErgot[\"severity_in_neighbor\"].isna(), \"severity_in_neighbor\"] = 0\n",
     "\n",
-    "    return ergot"
+    "    return aggErgot"
    ]
   },
   {
@@ -201,12 +167,7 @@
     "    query = sq.text(\n",
     "        f\"\"\"\n",
     "        CREATE TABLE {TABLENAME} (\n",
-    "            sample_id               SERIAL,\n",
     "            year                    INT,\n",
-    "            province                VARCHAR,\n",
-    "            crop_district           INT,\n",
-    "            incidence               BOOL,\n",
-    "            severity                FLOAT,\n",
     "            district                INT,\n",
     "            percnt_true             FLOAT, \n",
     "            has_ergot               BOOL, \n",
@@ -220,7 +181,7 @@
     "            severity_prev3          FLOAT, \n",
     "            severity_in_neighbor    FLOAT,\n",
     "\n",
-    "            CONSTRAINT PK_agg_ergot_sample PRIMARY KEY(sample_id)\n",
+    "            CONSTRAINT PK_agg_ergot_sample PRIMARY KEY(year, district)\n",
     "        );\n",
     "        COMMIT;\n",
     "        \"\"\"\n",
@@ -254,7 +215,7 @@
     "\n",
     "    ergot = calcUIDs(ergot)\n",
     "    neighbors = calcNeighbors(agRegions)\n",
-    "    ergot = createErgotFeatures(ergot, neighbors)\n",
+    "    aggErgot = createErgotFeatures(ergot, neighbors)\n",
     "\n",
     "    try:\n",
     "        results = sq.text(queryBuilder.tableExistsReq(TABLENAME))\n",
@@ -263,7 +224,7 @@
     "        if not tableExists:\n",
     "            createAggErgotTable(db)\n",
     "\n",
-    "        ergot.to_sql(\n",
+    "        aggErgot.to_sql(\n",
     "            TABLENAME, con=conn, schema=\"public\", if_exists=\"replace\", index=False\n",
     "        )\n",
     "        conn.commit()\n",
